# vcs-providers-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  cliff.toml
.github/workflows/: publish.yml  release.yml  rust.yml  test.yml
crates/bitbucket/: Cargo.toml  README.md
crates/bitbucket/src/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  lib.rs  mappers.rs  pagination.rs  pipelines.rs  provider_pipelines.rs  repos.rs  repositories.rs  request_pagination.rs  response_fixture.rs
crates/bitbucket/tests/: auth_organizations.rs  code_review_requests.rs  collaboration_hydration.rs  conformance.rs  issue_hydration.rs  issue_requests.rs  manager_facade.rs  pagination_hydration.rs  pipeline_hydration.rs  pipeline_requests.rs  provider.rs  repo_hydration.rs  repo_requests.rs  runtime.rs  transport_facade.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: auth.rs  capability.rs  code_reviews.rs  errors.rs  helpers.rs  http.rs  issues.rs  lib.rs  local_git.rs  manager.rs  middleware.rs  organizations.rs  pagination.rs  pipelines.rs  rate_limit.rs  registry.rs  releases.rs  repos.rs  repositories.rs  retry.rs  runtime.rs  telemetry.rs  testing.rs  transport.rs  url.rs
crates/core/src/code_reviews/: delete.rs  drafts.rs  list.rs  operations.rs  patches.rs  queries.rs  scoped.rs  transport.rs
crates/core/src/issues/: drafts.rs  list.rs  operations.rs  patches.rs  queries.rs  scoped.rs  transport.rs
crates/core/src/local_git/: blame.rs  capabilities.rs  clone.rs  commands.rs  diff.rs  diff_parser.rs  log.rs  merge.rs  merge_base.rs  reference.rs  remote.rs  show.rs  status.rs  url.rs  worktree.rs
crates/core/src/local_git/merge/: conflict_text.rs  tree_output.rs
crates/core/src/manager/: code_review_mutations.rs  code_reviews.rs  issue_mutations.rs  issues.rs  middleware.rs  pipelines.rs  rate_limit.rs  release_mutations.rs  releases.rs  repo_mutations.rs  repos.rs  retry.rs
crates/core/src/pipelines/: queries.rs  scoped.rs  transport.rs
crates/core/src/rate_limit/: transport.rs
crates/core/src/releases/: drafts.rs  list.rs  operations.rs  patches.rs  queries.rs  scoped.rs  transport.rs
crates/core/src/repos/: contracts.rs  mod.rs  names.rs  operations.rs  queries.rs  resources.rs  transport.rs
crates/core/src/runtime/: configuration.rs
crates/core/src/testing/: conformance.rs
crates/core/src/testing/conformance/: contracts.rs
crates/core/src/testing/conformance/contracts/: support.rs
crates/core/tests/: auth.rs  capabilities.rs  errors.rs  http.rs  local_git.rs  local_git_cognition.rs  local_git_support.rs  middleware.rs  pagination.rs  provider_contracts.rs  rate_limit.rs  repos.rs  retry.rs  runtime.rs  telemetry.rs  transport.rs  url.rs
crates/core/tests/support/: local_git_conflict.rs  mod.rs
crates/git-cognition/: Cargo.toml  README.md
crates/git-cognition/src/: lib.rs
crates/github/: Cargo.toml  README.md
crates/github/src/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  lib.rs  mappers.rs  pagination.rs  pipelines.rs  provider_fluent.rs  provider_pipelines.rs  releases.rs  repos.rs  repositories.rs  request_pagination.rs  response_fixture.rs
crates/github/src/mappers/: response_types.rs
crates/github/tests/: auth_organizations.rs  code_review_requests.rs  collaboration_hydration.rs  conformance.rs  issue_requests.rs  manager_facade.rs  pagination_hydration.rs  pipeline_hydration.rs  pipeline_requests.rs  provider.rs  release_requests.rs  repo_hydration.rs  repo_requests.rs  runtime.rs  transport_facade.rs
crates/gitlab/: Cargo.toml  README.md
crates/gitlab/src/: capabilities.rs  client.rs  code_reviews.rs  issues.rs  lib.rs  mappers.rs  pagination.rs  pipelines.rs  provider_collaboration.rs  provider_pipelines.rs  releases.rs  repos.rs  repositories.rs  request_pagination.rs  response_fixture.rs
crates/gitlab/tests/: auth_organizations.rs  code_review_requests.rs  collaboration_hydration.rs  conformance.rs  issue_requests.rs  manager_facade.rs  pagination_hydration.rs  pipeline_hydration.rs  pipeline_requests.rs  provider.rs  release_requests.rs  repo_hydration.rs  repo_requests.rs  runtime.rs  transport_facade.rs
docs/: 00-overview.md  01-architecture.md  02-development.md  03-auth.md  04-transport.md  05-middleware.md  06-rate-limit.md  07-telemetry.md  08-pagination.md  09-errors.md  10-provider-runtime.md  11-repo-requests.md  12-provider-contracts.md  13-issue-requests.md  14-code-review-requests.md  15-release-requests.md  16-runtime-resource-hydration.md  17-http-auth-middleware-runtime.md  18-repository-crud-hydration.md  19-collaboration-resource-hydration.md  20-provider-manager-facade.md  21-provider-conformance-suite.md  22-end-to-end-usage.md  23-unified-dev-adapter-coverage.md  24-local-git-cognition-reads.md
examples/: Cargo.toml
examples/src/: main.rs
