[package]
name = "vcs-provider-gitlab"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
vcs-provider-core.workspace = true

[lints]
workspace = true
