[package]
name = "git-cognition-gitlab"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
git-cognition-core.workspace = true

[dev-dependencies]
git-cognition-core = { workspace = true, features = ["testing"] }

[lints]
workspace = true
