[package]
name = "git-cognition-gitlab"
description = "GitLab provider driver for git-cognition. Implements Provider contracts over GitLab REST."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
keywords = ["git", "gitlab", "vcs", "cognition", "provider"]
categories = ["api-bindings", "web-programming::http-client"]
publish = true

[dependencies]
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
git-cognition-core.workspace = true

[dev-dependencies]
git-cognition-core = { workspace = true, features = ["testing"] }

[lints]
workspace = true
